Renamed Zehntausen.md as Readme.md

--- a/Zehntausend.csproj
+++ b/Zehntausend.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Zehntausend.md" />
+    <None Include="Readme.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="UserStoriesZehntausend.txt" />
